--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
   <header>
     <!-- Navbar starts -->
-    <nav class="amber darken-2">
+    <nav class="amber">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
+        <a href="#" class="brand-logo grey-text text-darken-4">BeerFlix</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+          <li><a class="grey-text text-darken-4" href="sass.html">Sass</a></li>
+          <li><a class="grey-text text-darken-4" href="badges.html">Components</a></li>
+          <li><a class="grey-text text-darken-4" href="collapsible.html">JavaScript</a></li>
         </ul>
       </div>
     </nav>
     <picture>
       <source srcset="./src/images/bg-beerflix-2560.jpg" media="(min-width: 2560px)">
-      <source srcset="./src/images/bg-beerflix-1920.jpg" media="(max-width: 1920px)">
-      <source srcset="./src/images/bg-beerflix-1024.jpg" media="(min-width: 1024px)">
+      <source srcset="./src/images/bg-beerflix-1920.jpg" media="(min-width: 1025px)">
+      <source srcset="./src/images/bg-beerflix-1024.jpg" media="(max-width: 1024px)">
       <img src="./src/images/bg-beerflix-1024.jpg" alt="beer-bar" class="bg-header"/>
   </picture>
     <!-- Navbar ends -->
@@ -37,7 +37,7 @@
           <div class="card-image">
             <img src="./src/images/sample-1.jpg">
             <span class="card-title">Card Title</span>
-            <a class="btn-floating halfway-fab waves-effect waves-light amber darken-2"><i class="material-icons">add</i></a>
+            <a class="btn-floating halfway-fab waves-effect waves-light amber "><i class="material-icons grey-text text-darken-4">add</i></a>
           </div>
           <div class="card-content">
             <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
@@ -49,6 +49,9 @@
     <!-- Main Section ends -->
     
     <!-- Footer starts -->
+    <footer class="grey darken-4 grey-text text-lighten-5">
+      <div class="center-align pt-3">BeerFlix. Just beers...</div>
+    </footer>
     <!-- Footer ends -->
 </body>
 </html>
