--- a/index.html
+++ b/index.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./src/css/styles.css">
-    <title>BeerFlix</title>
-</head>
-<body>
-  <header>
-    <!-- Navbar starts -->
-    <nav class="amber">
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo grey-text text-darken-4">BeerFlix</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a class="grey-text text-darken-4" href="sass.html">Sass</a></li>
-          <li><a class="grey-text text-darken-4" href="badges.html">Components</a></li>
-          <li><a class="grey-text text-darken-4" href="collapsible.html">JavaScript</a></li>
-        </ul>
-      </div>
-    </nav>
-    <picture>
-      <source srcset="./src/images/bg-beerflix-2560.jpg" media="(min-width: 2560px)">
-      <source srcset="./src/images/bg-beerflix-1920.jpg" media="(min-width: 1025px)">
-      <source srcset="./src/images/bg-beerflix-1024.jpg" media="(max-width: 1024px)">
-      <img src="./src/images/bg-beerflix-1024.jpg" alt="beer-bar" class="bg-header"/>
-  </picture>
-    <!-- Navbar ends -->
-  </header>
- 
-  <!-- Main Section starts -->
-  <div class="container">
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image">
-            <img src="./src/images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
-            <a class="btn-floating halfway-fab waves-effect waves-light amber "><i class="material-icons grey-text text-darken-4">add</i></a>
-          </div>
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-          </div>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="./src/css/styles.css">
+      <title>BeerFlix</title>
+  </head>
+  <body>
+    <header>
+      <!-- Navbar starts -->
+      <nav class="amber">
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo grey-text text-darken-4">BeerFlix</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a class="grey-text text-darken-4" href="sass.html">Sass</a></li>
+            <li><a class="grey-text text-darken-4" href="badges.html">Components</a></li>
+            <li><a class="grey-text text-darken-4" href="collapsible.html">JavaScript</a></li>
+          </ul>
         </div>
+      </nav>
+      <!-- Navbar ends -->
+      <div id="header-img">
+        <picture>
+          <source srcset="./src/images/bg-beerflix-2560.jpg" media="(min-width: 2560px)">
+          <source srcset="./src/images/bg-beerflix-1920.jpg" media="(min-width: 1025px)">
+          <source srcset="./src/images/bg-beerflix-1024.jpg" media="(max-width: 1024px)">
+          <img src="./src/images/bg-beerflix-1024.jpg" alt="beer-bar" class="bg-header"/>
+        </picture>
+        <input type="text" name="search-beer" id="search-beer" placeholder="Search for Beers" class="main-search ambar grey-text text-darken-3"/>
       </div>
+    </header>
+  
+    <!-- Main Section starts -->
+    <div id="main">
+      <div class="container">
+        <div id="main-beers" class="row"></div>
+      </div>
+      <!-- Footer starts -->
+      <footer class="grey darken-4 grey-text text-lighten-5">
+        <div class="center-align pt-3">BeerFlix. Just beers...</div>
+      </footer>
+      <!-- Footer ends -->
     </div>
-  </div>
     <!-- Main Section ends -->
     
-    <!-- Footer starts -->
-    <footer class="grey darken-4 grey-text text-lighten-5">
-      <div class="center-align pt-3">BeerFlix. Just beers...</div>
-    </footer>
-    <!-- Footer ends -->
-</body>
+    
+    <script type="module" src="./src/js/api.js"></script>
+    <script type="module" src="./src/js/ui.js"></script>
+    <script type="module" src="./src/js/beers.js"></script>
+  </body>
 </html>
