Adding date filter

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             <input data-pattern-mismatch="Input invalid" required type="search" name="search-beer" id="search-beer" placeholder="Search for Beers" class="ambar grey-text text-darken-3"/>
             <button type="submit" class="waves-effect waves-light btn amber grey-text text-darken-3">Search</button>
           </div>
+          <div id="date-filter">
+            <div class="row">
+              <div class="col s12 m6">
+                <span class="new badge amber grey-text text-darken-4" data-badge-caption="From:"></span>
+                <input type="date" name="start-date" id="start-date">
+              </div>
+              <div class="col s12 m6">
+                <span class="new badge amber grey-text text-darken-4" data-badge-caption="To:"></span>
+                <input type="date" name="end-date" id="end-date">
+              </div>
+            </div>
+          </div>
           </form>
       </div>
     </header>
