--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="nav-wrapper">
           <a href="#" class="brand-logo grey-text text-darken-4">BeerFlix</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a class="grey-text text-darken-4" href="sass.html">Sass</a></li>
-            <li><a class="grey-text text-darken-4" href="badges.html">Components</a></li>
-            <li><a class="grey-text text-darken-4" href="collapsible.html">JavaScript</a></li>
+            <li><a class="grey-text text-darken-4" href="#">Item 1</a></li>
+            <li><a class="grey-text text-darken-4" href="#">Item 2</a></li>
+            <li><a class="grey-text text-darken-4" href="#">Item 3</a></li>
           </ul>
         </div>
       </nav>
