--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link rel="stylesheet" href="./src/css/styles.css">
+      <link rel="stylesheet" href="/src/css/styles.css">
       <title>BeerFlix</title>
   </head>
   <body>
@@ -23,10 +23,10 @@
       <!-- Navbar ends -->
       <div id="header-img">
         <picture>
-          <source srcset="./src/images/bg-beerflix-2560.jpg" media="(min-width: 2560px)">
-          <source srcset="./src/images/bg-beerflix-1920.jpg" media="(min-width: 1025px)">
-          <source srcset="./src/images/bg-beerflix-1024.jpg" media="(max-width: 1024px)">
-          <img src="./src/images/bg-beerflix-1024.jpg" alt="beer-bar" class="bg-header"/>
+          <source srcset="/src/images/bg-beerflix-2560.jpg" media="(min-width: 2560px)">
+          <source srcset="/src/images/bg-beerflix-1920.jpg" media="(min-width: 1025px)">
+          <source srcset="/src/images/bg-beerflix-1024.jpg" media="(max-width: 1024px)">
+          <img src="/src/images/bg-beerflix-1024.jpg" alt="beer-bar" class="bg-header"/>
         </picture>
         <form id="search-form" novalidate>
           <div class="main-search d-flex">
@@ -125,10 +125,11 @@
     <!-- Loader ends -->
     
     
-    <script type="module" src="./src/js/api.js"></script>
-    <script type="module" src="./src/js/beers.js"></script>
-    <script type="module" src="./src/js/ui.js"></script>
-    <script type="module" src="./src/js/search.js"></script>
-    <script src="./src/js/js.cookie.js"></script>
+    <script type="module" src="/src/js/api.js"></script>
+    <!-- <script type="module" src="/src/js/beers.js"></script> -->
+    <script type="module" src="/src/js/ui.js"></script>
+    <script type="module" src="/src/js/search.js"></script>
+    <script type="module" src="/src/js/routes.js"></script>
+    <script src="/src/js/js.cookie.js"></script>
   </body>
 </html>
