Working on detail page with routes

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <!-- Navbar starts -->
       <nav class="amber">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo grey-text text-darken-4">BeerFlix</a>
+          <span id="arrow-back" class="hide"><a href="/"><i class="material-icons grey-text text-darken-4">arrow_back</i></a></span>
+          <a href="/" class="brand-logo grey-text text-darken-4">BeerFlix</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a class="grey-text text-darken-4" href="#">Item 1</a></li>
-            <li><a class="grey-text text-darken-4" href="#">Item 2</a></li>
-            <li><a class="grey-text text-darken-4" href="#">Item 3</a></li>
+            <li><a class="grey-text text-darken-4" href="#!">Item 1</a></li>
+            <li><a class="grey-text text-darken-4" href="#!">Item 2</a></li>
+            <li><a class="grey-text text-darken-4" href="#!">Item 3</a></li>
           </ul>
         </div>
       </nav>
